[package]
name = "minecraft-builder-server"
version = "0.1.0"
authors = ["pirosuke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"]}
dot_vox = "4.1.0"
dirs = "3.0.1"
regex = "1"
